Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1346

C++: schema parser cannot parse verbose primitive types

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.7.4
    • None
    • c++
    • None

    Description

      The Avro C++ library's schema parser currently throws an "Unknown additional Json fields" exception if a primitive type is not represented as a string literal. As per http://avro.apache.org/docs/current/spec.html#schema_primitive, primitive types can be defined as e.g. "{type: string}" or "string". Extra attributes are allowed too, e.g. "{"avro.java.string":"String","type":"string"}" (from the spec: "Attributes not defined in this document are permitted as metadata, but must not affect the format of serialized data.").

      Attachments

        1. AVRO-1346.patch
          0.8 kB
          Skye Wanderman-Milne
        2. AVRO-1346.3.patch
          2 kB
          Skye Wanderman-Milne
        3. AVRO-1346.2.patch
          2 kB
          Skye Wanderman-Milne

        Activity

          People

            skye Skye Wanderman-Milne
            skye Skye Wanderman-Milne
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: