AVRO-1346. C++: schema parser cannot parse verbose primitive types

git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1495109 13f79535-47bb-0310-9956-ffa450edef68